--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4">
-    <!-- 
-     
-      <audio id="hymn-audio" src="lamin.mp3" preload="auto" loop></audio>
-    -->
-    <audio id="hymn-audio" src="ИМЯ_ВАШЕГО_ФАЙЛА.mp3" preload="auto" loop></audio>
+    <!-- Аудио плеер с вашим треком -->
+    <audio id="hymn-audio" src="lamin.mp3" preload="auto" loop></audio>
 
     <!-- Основной контейнер -->
     <div class="main-container p-6 md:p-10 rounded-2xl shadow-2xl border max-w-2xl w-full mx-auto relative">
